# sentiric-velocity

./: .gitignore  ARCHITECTURE.md  Cargo.toml  PROGRESS.md  README.md  SPECIFICATION.md  config.toml  connect-proxy.bat  connect-proxy.sh  disconnect-proxy.bat  disconnect-proxy.sh  proxy-off.sh  proxy-on.sh  setup-wsl.sh  start-proxy.bat  start.bat  start.sh  stop-proxy.bat  stop.bat  stop.sh  wsl-proxy-off.sh  wsl-proxy.sh
docs/: ARCHITECTURE_v2.md  SPECIFICATION_V2.md
src/: cache.rs  certs.rs  config.rs  handler.rs  main.rs  management.rs  proxy.rs
templates/: index.html
