[package]
name = "velocache"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28.2", features = ["full"] }
reqwest = { version = "0.11.18", features = ["json", "stream", "native-tls-alpn"] }
clap = { version = "4.3.0", features = ["derive"] }
warp = { version = "0.3.5", features = ["websocket"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
config = "0.13.3"
lru = "0.12.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "registry", "fmt"] }
tokio-util = { version = "0.7.8", features = ["codec"] }
http = "0.2.9"
hyper = { version = "0.14.27", features = ["full"] }
hyper-tls = "0.5.0"
anyhow = "1.0.71"
futures-util = { version = "0.3.28", features = ["sink"] }
md5 = "0.7.0"
bincode = "1.3.3"
atty = "0.2.14"
lazy_static = "1.4.0"
# HTTPS Interception için kanıtlanmış, sabit sürümler
rcgen = "0.11.3"
tokio-rustls = "0.24.1"
rustls = "0.21.11"
rustls-pemfile = "1.0.4"
chrono = { version = "0.4.26", features = ["serde"] }