[package]
name = "velocache"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28.2", features = ["full"] }
clap = { version = "4.3.0", features = ["derive"] }
warp = { version = "0.3.5", features = ["websocket"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
config = "0.13.3"
lru = "0.12.0"
tracing = "0.1.37" 
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "registry", "fmt"] }
tokio-util = { version = "0.7.8", features = ["codec", "io"] } 
http = "0.2.9" 
hyper = { version = "0.14.27", features = ["full"] }
anyhow = "1.0.71"
# NİHAİ DÜZELTME: Yanlış 'stream' özelliği kaldırıldı.
futures-util = { version = "0.3.28", features = ["sink"] }
# NİHAİ DÜZELTME: StreamExt trait'ini sağlayan doğru kütüphane eklendi.
futures = "0.3.28"
md5 = "0.7.0"
bincode = "1.3.3"
atty = "0.2.14"
lazy_static = "1.4.0"
rcgen = { version = "0.11.3", features = ["x509-parser"] }
tokio-rustls = "0.24.1"
rustls = "0.21.11"
rustls-pemfile = "1.0.4"
chrono = { version = "0.4.26", features = ["serde"] }

trust-dns-resolver = "0.22"
hyper-rustls = "0.23.2" 
rustls-native-certs = "0.6.3"
http-serde = "1.1.2"
async-trait = "0.1.73"